syntax = "proto2";

option java_multiple_files = true;
option java_package = "com.r3.conclave.filesystem.proto";

message Request {
    enum Type {
        PATHS_GET = 0;
        FILES_WRITE = 1;
        FILE_INPUT_STREAM_CONSTRUCTOR = 2;
        INPUT_STREAM_READ = 3;
        INPUT_STREAM_READ_BYTES = 4;
        INPUT_STREAM_MARK_AVAILABLE = 5;
        INPUT_STREAM_CLOSE = 6;
        INPUT_STREAM_RESET = 7;
        FILE_INPUT_STREAM_FD = 8;
        FILES_DELETE = 9;
        FILES_CREATE_DIRECTORY = 10;
        FILES_CREATE_DIRECTORIES = 11;
        FILES_SIZE = 12;
        FILES_READ_ALL_BYTES = 13;
        JIMFS_INPUT_STREAM_OPEN = 14;
        FILE_OUTPUT_STREAM_CONSTRUCTOR = 15;
        OUTPUT_STREAM_WRITE = 16;
        OUTPUT_STREAM_WRITE_BYTES = 17;
        OUTPUT_STREAM_WRITE_OFFSET = 18;
        OUTPUT_STREAM_CLOSE = 19;
        FILES_NEW_OUTPUT_STREAM_DELETE_ON_CLOSE = 20;
        BYTE_CHANNEL_DELETE_ON_CLOSE = 21;
        BYTE_CHANNEL_CLOSE = 22;
        BUFFERED_INPUT_STREAM_OPEN = 23;
        BUFFERED_INPUT_STREAM_READ_BYTES = 24;
        FILES_NEW_INPUT_STREAM = 25;
        FILE_SYSTEMS_GET_DEFAULT = 26;
        FILE_SYSTEMS_GET_DEFAULT_PROVIDER = 27;
        FILE_SYSTEM_PROVIDER_INSTALLED_PROVIDERS = 28;
        DEFAULT_FILE_SYSTEM_PROVIDER_CREATE = 29;
    }
    required Type type = 1;
    optional string path = 2;
    optional bytes data = 3;
    optional int32 offset = 4;
    optional int32 length = 5;
    optional int32 uid = 6;
    optional bool append = 7;
}

message StringList {
    repeated string values = 1;
}